--- a/package.json
+++ b/package.json
@@ -6,5 +6,28 @@
   },
   "devDependencies": {
     "tape": "^4.0.0"
-  }
+  },
+  "name": "webgl2-idl",
+  "description": "fetch and parse the webgl2 idl",
+  "version": "0.0.0",
+  "main": "parse.js",
+  "scripts": {
+    "test": "tape test.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tmpvar/webgl2-idl.git"
+  },
+  "keywords": [
+    "webgl2",
+    "idl",
+    "parser",
+    "ast"
+  ],
+  "author": "Elijah Insua <tmpvar@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/tmpvar/webgl2-idl/issues"
+  },
+  "homepage": "https://github.com/tmpvar/webgl2-idl"
 }
